# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("fortune") {
  sources = [
    "src/c64.cpp",
    "src/cpu.cpp",
    "src/memory.cpp",
    "src/cia1.cpp",
    "src/cia2.cpp",
    "src/vic.cpp",
    "src/io_fuchsia.cpp",
    "src/loader.cpp",
    "src/main_fuchsia.cpp",
  ]
}
